--- a/cssPositioning/06_begin/styles/main.css
+++ b/cssPositioning/06_begin/styles/main.css
@@ -19,6 +19,7 @@ em {
 }
 
 .boxBlue {
-    background: #627da0;  
+    background: #627da0; 
+    float: left; /* allows other elements to move around it */
 }
 
